GNOME Bugzilla – Bug 689854
Regression: nautilus %s no longer works
Last modified: 2012-12-07 18:02:30 UTC
G_APPLICATION_IS_SERVICE is documented to terminate application if registration fails, so now nautilus won't allow to open a new folder by launching a second instance.
Thanks for the report - we don't need to set the flag actually. I pushed a fix to git master now.