main: don't set G_APPLICATION_IS_SERVICE

This is not actually necessary for the inactivity timeout to work, and
breaks command line activation.

https://bugzilla.gnome.org/show_bug.cgi?id=689854